# OpenglTest

./: .gitignore  CMakeLists.txt
lib/lylib/: CMakeLists.txt
lib/lylib/include/lylib/: exceptions.hpp  lylib.hpp  window.hpp
lib/lylib/src/: exceptions.cpp  lylib.cpp  window.cpp
src/: main.cpp
